[tool.poetry]
name = "tronwalletmicroservice"
version = "0.1.0"
description = "Test task for OOO Forkiteh"
authors = ["Tychin Denis"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.35.0"}
sqlalchemy = "^2.0.0"
aiosqlite = "^0.19.0"
alembic = "^1.16.2"
python-multipart = "^0.0.20"
pydantic-settings = "^2.10.1"
asyncpg = "^0.30.0"
httpx = "^0.27.0"
pytest-asyncio = "^1.0.0"
pytest = "^8.0.0"
tronpy = "0.6.1"

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"